fix: alignment of start routine error message

--- a/client/src/components/StartRoutineSection/StartRoutine.module.css
+++ b/client/src/components/StartRoutineSection/StartRoutine.module.css
@@ -13,6 +13,10 @@
     color: #3b3835;
 }
 
+.errorMessage {
+    align-self: center;
+}
+
 .startRoutineInner {
     display: flex;
     flex-direction: column;
